<!-- TODO: Проверить-->
<resources xmlns:tools="http://schemas.android.com/tools">

    <!--[LOGIN ACTIVITY START]-->
    <string name="login_activity_email_hint">Эл. адрес</string>
    <string name="login_activity_password_hint">Пароль</string>
    <string name="login_activity_name_hint">Имя</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_remember_password">Запомнить</string>
    <string name="login_have_not_account">Нет аккаунта?</string>
    <string name="login_have_an_account">Уже есть аккаунт?</string>
    <string name="login_sign_in">Войти</string>
    <string name="login_sign_up">Зарегестрироваться</string>

    <string name="error_email_is_not_valid">Пожалуйста укажите действительный email</string>
    <string name="error_password_is_not_valid">Пароль должен быть не короче 6 символов и содержать хотя бы 1 цифру.
        Использовать можно только буквы латинского алфавита и цифры.</string>

    <!--Forgot password dialogs-->
    <string name="title_forgot_password_dialog">Сбросить пароль</string>
    <string name="content_forgot_password_dialog">Пожалуйста введите email, который вы использовали для входа.</string>
    <string name="hint_edit_text_forgot_password_dialog">Email</string>
    <string name="prefill_edit_text_forgot_password_dialog" />
    <string name="positive_forgot_password_dialog">Сбросить</string>
    <string name="negative_forgot_password_dialog">Отмена</string>

    <!--Snackbar-->
    <string name="reset_password_email_content">Ссылка для сброса пароля отправлена на указанный адрес</string>
    <string name="reset_password_email_button">Понятно</string>

    <string name="incorrect_email_or_password">Неверный эл. адрес или пароль</string>
    <string name="email_collision">Пользователь с таким емайлом уже существует</string>
    <string name="sending_email_error">Не удалось отправить письмо на указанный эл. адрес</string>

    <!--[LOGIN ACTIVITY END]-->


    <string name="default_client_id" tools:ignore="Typos">536434948046-go474j9oc7ok05vb1kmj8sg10m2j5g7g.apps.googleusercontent.com</string>
    <string name="app_name">Я Вижу!</string>

    <string name="title_activity_main">Я Вижу!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <!--Nav menu items-->
    <string name="nav_menu_account">Личный кабинет</string>
    <string name="nav_menu_tests">Тесты</string>
    <string name="nav_menu_specialists">Специалисты</string>
    <string name="nav_menu_price">Цены</string>
    <string name="nav_menu_site">Наш сайт</string>
    <string name="nav_menu_send_email">Написать нам</string>
    <string name="nav_menu_call">Позвонить нам</string>
    <string name="nav_menu_share">Поделиться</string>
    <string name="nav_menu_rate">Оценить</string>
    <string name="nav_menu_settings">Настройки</string>
    <string name="nav_menu_our_location">Как добраться</string>
    <string name="action_about">О приложении</string>
    <string name="action_log_out">Выйти</string>

    <!--[PHONE SIGN IN ACTIVITY START]-->
    <string name="phone_number_sign_in_subtitle">Пожалуйста выберите страну и введите ваш номер телефона</string>
    <string name="phone_number_sign_in_edit_number">Изменить номер телефона</string>
    <string name="phone_number_sign_in_sms">Мы отправили на ваш телефон SMS с кодом активации.</string>
    <string name="phone_number_sign_in_enter_code">Пожалуйста введите код ниже.</string>
    <string name="phone_number_sign_in_enter_hint">Код</string>
    <string name="phone_number_sign_in_next_button">Далее</string>
    <string name="phone_number_sign_in_title">Вход по номеру телефона</string>
    <string name="phone_number_sign_in_enter_phone_hint">Номер телефона</string>
    <string name="phone_number_sign_in_incorrect_number">Неправильно указан номер</string>
    <string name="phone_number_sign_in_hint">(XXX) XXX-XX-XX</string>
    <string name="phone_number_sign_in_incorrect_code">Неверный код!</string>
    <string name="phone_number_sign_in_error">Неизвестная ошибка. Попробуйте позднее.</string>
    <!--[PHONE SIGN IN ACTIVITY END]-->

    <!--[START TEST LASIK]-->
    <string name="_1_question">Сколько Вам лет?</string>
    <string name="_2_question">Какое у Вас нарушение зрения?</string>
    <string name="_3_question">Носите ли Вы очки или контактные линзы?</string>
    <string name="_4_question">Пользуетесь ли Вы очками для чтения?</string>
    <string name="_5_question">Имеются ли у Вас хронические заболевания?</string>
    <string name="_6_question">Были ли у Вас травмы глаз или другие операции на глазах?</string>
    <string name="_7_question">Что Вас больше всего раздражает в очках или в контактных линзах?</string>
    <string name="_8_question">Что Вы мечтаете сделать, освободившись от необходимости ношения очков и контактных линз?</string>

    <!--Answers-->
    <string name="answer_to_the_1_question_option_1">меньше 18</string>
    <string name="answer_to_the_1_question_option_2">от 18 до 45</string>
    <string name="answer_to_the_1_question_option_3">больше 45</string>
    <string name="answer_to_the_2_question_option_1">Миопия (близорукость)</string>
    <string name="answer_to_the_2_question_option_2">Гиперметропия (дальнозоркость)</string>
    <string name="answer_to_the_2_question_option_3">Астигматизм</string>
    <string name="answer_to_the_2_question_option_4">Не знаю</string>
    <string name="answer_to_the_3_question_option_1">Ношу очки</string>
    <string name="answer_to_the_3_question_option_2">Ношу контактные линзы</string>
    <string name="answer_to_the_3_question_option_3">Ношу очки и контактные линзы</string>
    <string name="answer_to_the_3_question_option_4">Не ношу</string>
    <string name="simple_positive_answer">Да</string>
    <string name="simple_negative_answer">Нет</string>
    <!--[END TEST LASIK]-->
</resources>
