<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_nav_menu_account_24dp"
            android:title="@string/nav_menu_account" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_nav_menu_tests_24dp"
            android:title="@string/nav_menu_tests" />
        <item
            android:id="@+id/nav_specialists"
            android:icon="@drawable/ic_nav_menu_specialists_24dp"
            android:title="@string/nav_menu_specialists" />
        <item
            android:id="@+id/nav_price"
            android:icon="@drawable/ic_nav_menu_price_24dp"
            android:title="@string/nav_menu_price" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send_email"
            android:icon="@drawable/ic_nav_menu_send_email_24dp"
            android:title="@string/nav_menu_send_email" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_nav_menu_call_24dp"
            android:title="@string/nav_menu_call" />
        <item
            android:id="@+id/nav_our_location"
            android:icon="@drawable/ic_nav_menu_our_location_24dp"
            android:title="@string/nav_menu_our_location" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_nav_menu_share_24dp"
            android:title="@string/nav_menu_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_nav_menu_rate_24dp"
            android:title="@string/nav_menu_rate" />
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_menu_settings_24dp"
            android:title="@string/nav_menu_settings" />
    </group>
</menu>
