<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.naysayer.iseeclinic.login.phone.PhoneNumberSignInViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootlayout_phone_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLoginActivityBackground">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_entering_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_activity_horizontal_margin"
            android:layout_marginStart="@dimen/default_activity_horizontal_margin"
            android:focusableInTouchMode="true"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="@dimen/default_activity_horizontal_margin"
                android:paddingStart="@dimen/default_activity_horizontal_margin"
                android:paddingTop="@dimen/default_activity_horizontal_margin">

                <TextView
                    android:id="@+id/text_view_phone_number_sign_in_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/phone_number_sign_in_title"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_phone_number_sign_in_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/default_activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/phone_number_sign_in_subtitle"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_title" />


                <com.rilixtech.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_countryPreference="RU,UA,BY,KZ,TJ,UZ,FI"
                    app:ccp_defaultNameCode="RU"
                    app:ccp_hideNameCode="true"
                    app:layout_constraintBottom_toBottomOf="@id/phoneNumberAppCompatEditText"
                    app:layout_constraintStart_toStartOf="@id/text_view_phone_number_sign_in_subtitle"
                    app:layout_constraintTop_toTopOf="@id/phoneNumberAppCompatEditText" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phoneNumberAppCompatEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/phone_number_sign_in_enter_phone_hint"
                    android:inputType="phone"
                    app:layout_constraintStart_toEndOf="@id/countryCodePicker"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_subtitle" />

                <Button
                    android:id="@+id/sendCodeButton"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/min_button_height"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/login_button_background"
                    android:fontFamily="@font/raleway_medium"
                    android:onClick="@{()-> viewModel.registerNumber()}"
                    android:text="@string/phone_number_sign_in_next_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/countryCodePicker" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_entering_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_activity_horizontal_margin"
            android:layout_marginStart="@dimen/default_activity_horizontal_margin"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/text_view_phone_number_sign_in_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_phone_number_sign_in_edit_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/phone_number_sign_in_edit_number"
                    android:textColor="@color/primaryDarkColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_number" />

                <TextView
                    android:id="@+id/text_view_phone_number_sign_in_edit_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/phone_number_sign_in_sms"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_edit_number" />

                <TextView

                    android:id="@+id/text_view_phone_number_sign_in_edit_notice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/phone_number_sign_in_enter_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_edit_notice" />

                <EditText
                    android:id="@+id/edit_text_code"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:fontFamily="@font/product_sans_regular"
                    android:hint="@string/phone_number_sign_in_enter_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_sign_in_edit_notice2" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/login_button_background"
                    android:fontFamily="@font/raleway_medium"
                    android:onClick="@{()-> viewModel.checkCode()}"
                    android:text="@string/phone_number_sign_in_next_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_code" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>